--- a/index.ipynb
+++ b/index.ipynb
@@ -588,9 +588,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Solta',\n",
+       " 'Greenville',\n",
+       " 'Buenos Aires',\n",
+       " 'Los Cabos',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Archipelago Sea',\n",
+       " 'Iguazu Falls',\n",
+       " 'Salina Island',\n",
+       " 'Toronto',\n",
+       " 'Pyeongchang']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "top_travel_cities"
    ]
@@ -604,9 +626,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Solta', 'Greenville']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "top_two = top_travel_cities[0:2]\n",
     "top_two"
